src/tests/snapshots/lovely__tests__compiler_tests@block_expressions.lv.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/source_files/block_expressions.lv
---
[
    Token {
        kind: Identifier,
        span: Span {
            start: 0,
            end: 1,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 2,
            end: 3,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 3,
            end: 4,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 5,
            end: 6,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 10,
            end: 11,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 11,
            end: 12,
        },
    },
    Token {
        kind: True,
        span: Span {
            start: 16,
            end: 20,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 24,
            end: 25,
        },
    },
    Token {
        kind: Minus,
        span: Span {
            start: 26,
            end: 27,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 28,
            end: 29,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 30,
            end: 31,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 33,
            end: 34,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 35,
            end: 36,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 37,
            end: 40,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 41,
            end: 42,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 43,
            end: 44,
        },
    },
]
