src/tests/snapshots/lovely__tests__compiler_tests@functions.lv.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/source_files/functions.lv
---
[
    Token {
        kind: Identifier,
        span: Span {
            start: 0,
            end: 3,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 4,
            end: 5,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 5,
            end: 6,
        },
    },
    Token {
        kind: Fun,
        span: Span {
            start: 7,
            end: 10,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 11,
            end: 12,
        },
    },
    Token {
        kind: Tilde,
        span: Span {
            start: 12,
            end: 13,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 13,
            end: 14,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 14,
            end: 15,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 16,
            end: 19,
        },
    },
    Token {
        kind: Comma,
        span: Span {
            start: 19,
            end: 20,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 21,
            end: 23,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 24,
            end: 25,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 25,
            end: 26,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 27,
            end: 30,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 30,
            end: 31,
        },
    },
    Token {
        kind: RArrow,
        span: Span {
            start: 32,
            end: 34,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 35,
            end: 38,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 38,
            end: 39,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 40,
            end: 41,
        },
    },
    Token {
        kind: Plus,
        span: Span {
            start: 42,
            end: 43,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 44,
            end: 45,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 47,
            end: 50,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 51,
            end: 52,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 52,
            end: 53,
        },
    },
    Token {
        kind: Fun,
        span: Span {
            start: 54,
            end: 57,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 58,
            end: 59,
        },
    },
    Token {
        kind: Tilde,
        span: Span {
            start: 59,
            end: 60,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 60,
            end: 61,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 61,
            end: 62,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 63,
            end: 67,
        },
    },
    Token {
        kind: Comma,
        span: Span {
            start: 67,
            end: 68,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 69,
            end: 71,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 72,
            end: 73,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 73,
            end: 74,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 75,
            end: 79,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 79,
            end: 80,
        },
    },
    Token {
        kind: RArrow,
        span: Span {
            start: 81,
            end: 83,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 84,
            end: 88,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 88,
            end: 89,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 90,
            end: 91,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 91,
            end: 92,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 94,
            end: 98,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 99,
            end: 100,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 100,
            end: 101,
        },
    },
    Token {
        kind: Fun,
        span: Span {
            start: 102,
            end: 105,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 105,
            end: 106,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 106,
            end: 107,
        },
    },
    Token {
        kind: RArrow,
        span: Span {
            start: 108,
            end: 110,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 111,
            end: 114,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 114,
            end: 115,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 116,
            end: 117,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 121,
            end: 122,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 123,
            end: 124,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 124,
            end: 125,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 126,
            end: 129,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 129,
            end: 130,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 130,
            end: 131,
        },
    },
    Token {
        kind: Comma,
        span: Span {
            start: 131,
            end: 132,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 133,
            end: 135,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 135,
            end: 136,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 137,
            end: 138,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 138,
            end: 139,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 144,
            end: 145,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 146,
            end: 147,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 147,
            end: 148,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 149,
            end: 152,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 152,
            end: 153,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 153,
            end: 154,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 154,
            end: 155,
        },
    },
    Token {
        kind: Comma,
        span: Span {
            start: 155,
            end: 156,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 157,
            end: 159,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 159,
            end: 160,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 161,
            end: 162,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 162,
            end: 163,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 163,
            end: 164,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 169,
            end: 170,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 171,
            end: 172,
        },
    },
]
