src/tests/snapshots/lovely__tests__compiler_tests@idents.lv-4.snap
---
source: src/tests/mod.rs
expression: ir_string
input_file: src/tests/source_files/idents.lv
---
ENTRY:
  a#0 := 12
  b#1 := 9
  t0 := a#0 + b#1
  c#2 := t0
  t1 := c#2 + 3
  c#3 := t1
  x#4 := c#3
