src/tests/snapshots/lovely__tests__compiler_tests@primitive_literals.lv-2.snap
---
source: src/tests/mod.rs
expression: ast
input_file: src/tests/source_files/primitive_literals.lv
---
Program(
    [
        Expression {
            span: Span {
                start: 21,
                end: 22,
            },
            kind: IntLiteral(
                0,
            ),
        },
        Expression {
            span: Span {
                start: 38,
                end: 47,
            },
            kind: IntLiteral(
                123456789,
            ),
        },
        Expression {
            span: Span {
                start: 64,
                end: 68,
            },
            kind: BoolLiteral(
                true,
            ),
        },
        Expression {
            span: Span {
                start: 70,
                end: 75,
            },
            kind: BoolLiteral(
                false,
            ),
        },
        Expression {
            span: Span {
                start: 91,
                end: 93,
            },
            kind: Block(
                [],
            ),
        },
    ],
)
