src/tests/snapshots/lovely__tests__compiler_tests@primitive_literals.lv-3.snap
---
source: src/tests/mod.rs
expression: checked_program
input_file: src/tests/source_files/primitive_literals.lv
---
CheckedProgram {
    exprs: [
        CheckedExpression {
            type_id: 0,
            data: IntLiteral(
                0,
            ),
        },
        CheckedExpression {
            type_id: 0,
            data: IntLiteral(
                123456789,
            ),
        },
        CheckedExpression {
            type_id: 1,
            data: BoolLiteral(
                true,
            ),
        },
        CheckedExpression {
            type_id: 1,
            data: BoolLiteral(
                false,
            ),
        },
        CheckedExpression {
            type_id: 2,
            data: Block(
                [],
            ),
        },
    ],
}
