src/tests/snapshots/lovely__tests__compiler_tests@primitive_literals.lv.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/source_files/primitive_literals.lv
---
[
    Token {
        kind: IntLiteral,
        span: Span {
            start: 21,
            end: 22,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 38,
            end: 47,
        },
    },
    Token {
        kind: True,
        span: Span {
            start: 64,
            end: 68,
        },
    },
    Token {
        kind: False,
        span: Span {
            start: 70,
            end: 75,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 91,
            end: 92,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 92,
            end: 93,
        },
    },
]
