src/tests/snapshots/lovely__tests__compiler_tests@scoping.lv.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/source_files/scoping.lv
---
[
    Token {
        kind: Identifier,
        span: Span {
            start: 0,
            end: 1,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 2,
            end: 3,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 3,
            end: 4,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 5,
            end: 6,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 10,
            end: 11,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 12,
            end: 13,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 13,
            end: 14,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 15,
            end: 16,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 23,
            end: 24,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 25,
            end: 26,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 26,
            end: 27,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 28,
            end: 29,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 36,
            end: 37,
        },
    },
    Token {
        kind: Minus,
        span: Span {
            start: 38,
            end: 39,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 40,
            end: 42,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 46,
            end: 47,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 51,
            end: 52,
        },
    },
    Token {
        kind: Plus,
        span: Span {
            start: 53,
            end: 54,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 55,
            end: 57,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 58,
            end: 59,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 61,
            end: 62,
        },
    },
    Token {
        kind: Minus,
        span: Span {
            start: 63,
            end: 64,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 65,
            end: 66,
        },
    },
]
