src/tests/snapshots/lovely__tests__compiler_tests@variable_decls.lv.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/source_files/variable_decls.lv
---
[
    Token {
        kind: Identifier,
        span: Span {
            start: 0,
            end: 4,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 5,
            end: 6,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 6,
            end: 7,
        },
    },
    Token {
        kind: Fun,
        span: Span {
            start: 8,
            end: 11,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 12,
            end: 13,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 13,
            end: 14,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 14,
            end: 15,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 16,
            end: 17,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 21,
            end: 24,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 25,
            end: 26,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 26,
            end: 27,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 28,
            end: 29,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 34,
            end: 37,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 38,
            end: 39,
        },
    },
    Token {
        kind: SingleEqual,
        span: Span {
            start: 39,
            end: 40,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 41,
            end: 42,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 47,
            end: 50,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 51,
            end: 52,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 53,
            end: 57,
        },
    },
    Token {
        kind: SingleEqual,
        span: Span {
            start: 58,
            end: 59,
        },
    },
    Token {
        kind: True,
        span: Span {
            start: 60,
            end: 64,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 69,
            end: 72,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 73,
            end: 74,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 75,
            end: 79,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 80,
            end: 81,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 82,
            end: 83,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 83,
            end: 84,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 85,
            end: 86,
        },
    },
]
